# rpcmple

./: CMakeLists.txt  LICENSE  README.md  go.mod  rpcmpleConfig.cmake.in
GOLANG/: README.md  go.mod  rpcmpleclient.go
include/rpcmple/: connectionManagerBase.h  connectionManagerPipe.h  connectionManagerStdin.h  dataPublisher.h  messageManager.h  rpcmpleServer.h
rpcmple-cpp/: README.md
rpcmple-go/: datasignature.go  doc.go  rpcmplesignature.go
rpcmple_cpp/: CMakeLists.txt  example1.cpp
rpcmple_cpp/include/connectionmanager/: base.h  namedPipeClient.h  stdInOutClient.h  tcpSocketClient.h  tcpSocketServer.h  udpSocket.h
rpcmple_cpp/include/rpcmple/: connectionManagerBase.h  connectionManagerPipe.h  connectionManagerSocket.h  connectionManagerSocketClient.h  connectionManagerSocketServer.h  connectionManagerStdInOut.h  connectionManagerStdin.h  dataPublisher.h  dataSignature.h  dataSubscriber.h  messageManager.h  rpcClient.h  rpcServer.h  rpcmple.h  rpcmpleServer.h  rpcmpleutility.h
rpcmple_cpp/rpcmple/: connectionManagerSocket.h  dataSignature.h  messageManager.h  rpcmpleServer.h  rpcmpleutility.h
rpcmple_cpp/spdlog-1.14.1/: CMakeLists.txt
rpcmple_cpp/src_examples/: example1.cpp  example2.cpp  example3.cpp  example4RPCClientOverTCP.cpp  example4RPCServerOverTCP.cpp  example4socketclient.cpp  example4socketserver.cpp  example5PublisherOverUDP.cpp  example5PublisherTCP.cpp  example5PublisherUDP.cpp  example5SubscriberOverUDP.cpp  example5SubscriberTCP.cpp  example5SubscriberUDP.cpp
rpcmple_go/: datapublisher.go  datasignature.go  datasubscriber.go  doc.go  example_test.go  go.mod  messagemanager.go  rpcmpleclient.go  rpcmplesignature.go
rpcmple_go/example/: example1.go  example2.go  example3.go  example5PublisherOverUDP.go  example5SubscriberOverUDP.go
